// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox in Dark Theme renders Checked 1`] = `
<label
  className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  htmlFor="checked"
>
  <input
    aria-checked={true}
    checked={true}
    className="peer appearance-none h-6 w-6 outline-none align-top select-none"
    id="checked"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
  >
    <svg
      className="transition-opacity opacity-100"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 14.941L13.667 22 25 10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
  Checked
</label>
`;

exports[`Checkbox in Dark Theme renders Colors 1`] = `
Array [
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten rounded-none"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten shadow-krillin"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten text-krillin-60"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
]
`;

exports[`Checkbox in Dark Theme renders Default 1`] = `
<label
  className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
>
  <input
    aria-checked={false}
    checked={false}
    className="peer appearance-none h-6 w-6 outline-none align-top select-none"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
  >
    <svg
      className="transition-opacity opacity-0"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 14.941L13.667 22 25 10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</label>
`;

exports[`Checkbox in Dark Theme renders Disabled 1`] = `
Array [
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer opacity-30 cursor-not-allowed select-none"
    htmlFor="disabled1"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      disabled={true}
      id="disabled1"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Disabled
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer opacity-30 cursor-not-allowed select-none"
    htmlFor="disabled2"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      disabled={true}
      id="disabled2"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Disabled Checked
  </label>,
]
`;

exports[`Checkbox in Dark Theme renders ReadOnly 1`] = `
Array [
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer cursor-not-allowed select-none"
    htmlFor="readOnly1"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="readOnly1"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    ReadOnly
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer cursor-not-allowed select-none"
    htmlFor="readOnly2"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="readOnly2"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    ReadOnly Checked
  </label>,
]
`;

exports[`Checkbox in Dark Theme renders WithLabel 1`] = `
<label
  className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  htmlFor="withLabel"
>
  <input
    aria-checked={false}
    checked={false}
    className="peer appearance-none h-6 w-6 outline-none align-top select-none"
    id="withLabel"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
  >
    <svg
      className="transition-opacity opacity-0"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 14.941L13.667 22 25 10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
  With label
</label>
`;

exports[`Checkbox in Light Theme renders Checked 1`] = `
<label
  className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  htmlFor="checked"
>
  <input
    aria-checked={true}
    checked={true}
    className="peer appearance-none h-6 w-6 outline-none align-top select-none"
    id="checked"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
  >
    <svg
      className="transition-opacity opacity-100"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 14.941L13.667 22 25 10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
  Checked
</label>
`;

exports[`Checkbox in Light Theme renders Colors 1`] = `
Array [
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten rounded-none"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten shadow-krillin"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten text-krillin-60"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>,
]
`;

exports[`Checkbox in Light Theme renders Default 1`] = `
<label
  className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
>
  <input
    aria-checked={false}
    checked={false}
    className="peer appearance-none h-6 w-6 outline-none align-top select-none"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
  >
    <svg
      className="transition-opacity opacity-0"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 14.941L13.667 22 25 10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
</label>
`;

exports[`Checkbox in Light Theme renders Disabled 1`] = `
Array [
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer opacity-30 cursor-not-allowed select-none"
    htmlFor="disabled1"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      disabled={true}
      id="disabled1"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Disabled
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer opacity-30 cursor-not-allowed select-none"
    htmlFor="disabled2"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      disabled={true}
      id="disabled2"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Disabled Checked
  </label>,
]
`;

exports[`Checkbox in Light Theme renders ReadOnly 1`] = `
Array [
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer cursor-not-allowed select-none"
    htmlFor="readOnly1"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="readOnly1"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    ReadOnly
  </label>,
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer cursor-not-allowed select-none"
    htmlFor="readOnly2"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="readOnly2"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    ReadOnly Checked
  </label>,
]
`;

exports[`Checkbox in Light Theme renders WithLabel 1`] = `
<label
  className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  htmlFor="withLabel"
>
  <input
    aria-checked={false}
    checked={false}
    className="peer appearance-none h-6 w-6 outline-none align-top select-none"
    id="withLabel"
    onChange={[Function]}
    onClick={[Function]}
    type="checkbox"
  />
  <span
    aria-hidden="true"
    className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
  >
    <svg
      className="transition-opacity opacity-0"
      fill="none"
      height="1em"
      viewBox="0 0 32 32"
      width="1em"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M7 14.941L13.667 22 25 10"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
      />
    </svg>
  </span>
  With label
</label>
`;

exports[`Checkbox in RTL renders Checked 1`] = `
<div
  dir="rtl"
>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
    htmlFor="checked"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="checked"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Checked
  </label>
</div>
`;

exports[`Checkbox in RTL renders Colors 1`] = `
<div
  dir="rtl"
>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten rounded-none"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten shadow-krillin"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten text-krillin-60"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox in RTL renders Default 1`] = `
<div
  dir="rtl"
>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
  </label>
</div>
`;

exports[`Checkbox in RTL renders Disabled 1`] = `
<div
  dir="rtl"
>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer opacity-30 cursor-not-allowed select-none"
    htmlFor="disabled1"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      disabled={true}
      id="disabled1"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Disabled
  </label>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer opacity-30 cursor-not-allowed select-none"
    htmlFor="disabled2"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      disabled={true}
      id="disabled2"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    Disabled Checked
  </label>
</div>
`;

exports[`Checkbox in RTL renders ReadOnly 1`] = `
<div
  dir="rtl"
>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer cursor-not-allowed select-none"
    htmlFor="readOnly1"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="readOnly1"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    ReadOnly
  </label>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer cursor-not-allowed select-none"
    htmlFor="readOnly2"
  >
    <input
      aria-checked={true}
      checked={true}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="readOnly2"
      onChange={[Function]}
      onClick={[Function]}
      readOnly={true}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten bg-piccolo"
    >
      <svg
        className="transition-opacity opacity-100"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    ReadOnly Checked
  </label>
</div>
`;

exports[`Checkbox in RTL renders WithLabel 1`] = `
<div
  dir="rtl"
>
  <label
    className="relative flex items-center gap-2 text-moon-14 text-bulma cursor-pointer"
    htmlFor="withLabel"
  >
    <input
      aria-checked={false}
      checked={false}
      className="peer appearance-none h-6 w-6 outline-none align-top select-none"
      id="withLabel"
      onChange={[Function]}
      onClick={[Function]}
      type="checkbox"
    />
    <span
      aria-hidden="true"
      className="absolute top-1 ltr:left-1 rtl:right-1 flex w-4 h-4 items-center justify-center shadow-[0_0_0_1px_inset] transition-colors text-moon-16 rounded-moon-i-xs shadow-trunks peer-checked:shadow-none text-goten"
    >
      <svg
        className="transition-opacity opacity-0"
        fill="none"
        height="1em"
        viewBox="0 0 32 32"
        width="1em"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M7 14.941L13.667 22 25 10"
          stroke="currentColor"
          strokeLinecap="round"
          strokeLinejoin="round"
        />
      </svg>
    </span>
    With label
  </label>
</div>
`;
